--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather-app",
-  "version": "10.16.1",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js"
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.0.4",
+    "path": "^0.12.7",
     "request": "^2.88.0"
   },
   "devDependencies": {},
