--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-  "name": "weather-app",
+  "name": "web-server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js"
   },
   "keywords": [],
-  "author": "Canon Law",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "hbs": "^4.0.4",
-    "path": "^0.12.7",
+    "express": "^4.16.4",
+    "hbs": "^4.0.1",
     "request": "^2.88.0"
-  },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/thelawclaw11/weatherwebsite.git"
-  },
-  "bugs": {
-    "url": "https://github.com/thelawclaw11/weatherwebsite/issues"
-  },
-  "homepage": "https://github.com/thelawclaw11/weatherwebsite#readme",
-  "description": ""
+  }
 }
