--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "hbs": "^4.0.4",
     "path": "^0.12.7",
+    "production": "0.0.2",
     "request": "^2.88.0"
   },
   "devDependencies": {},
